# stackture-server

./: .env  Cargo.toml  README.md  bruh.txt
src/: debug.rs  main.rs
src/api/: api.rs  atomic.rs  mod.rs  node.rs  tree.rs  workspace.rs
src/auth/: auth.rs  login.rs  mod.rs  register.rs
src/chat/: api.rs  db.rs  mod.rs  node.rs  websocket.rs
src/chat/websocket/: node.rs  sapling.rs
src/db/: postgres.rs
