[package]
name = "stackture-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros", "ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rand_core = { version = "0.9.2", features = ["std"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros", "tls-native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.2", features = ["cors"] }
